cmake_minimum_required(VERSION 3.13.0)
project(SPH)

find_package(OpenGL REQUIRED)
# set(GLEW_INCLUDE_DIR, "D:/Tools/glew-2.1.0/glew-2.1.0/include/")
# set(GLEW_LIBRARIES, "D:/Tools/glew-2.1.0/glew-2.1.0/lib")
# list(APPEND CMAKE_PREFIX_PATH "D:/Tools/glew-2.1.0/glew-2.1.0/build/cmake/")
# set(CMAKE_PREFIX_PATH "D:/Tools/glew-2.1.0/glew-2.1.0/build/cmake/")
find_package(GLEW REQUIRED) 
# set(GLUT_INCLUDE_DIR, "D:/Tools/glut37/glut-3.7/include/GL/")
# set(GLUT_glut_LIBRARY, "D:/Tools/glut37/glut-3.7/lib/glut32.lib")
# set(CMAKE_PREFIX_PATH "D:/Tools/glut37")
# set(GLUT_INCLUDE_DIR "D:/Tools/glut37/glut-3.7/include")
set(CMAKE_PREFIX_PATH "D:/Tools/freeglut-MSVC-3.0.0-2.mp")
set(GLUT_INCLUDE_DIR "D:/Tools/freeglut-MSVC-3.0.0-2.mp/freeglut/include")
set(GLUT_glut_LIBRARY "D:/Tools/freeglut-MSVC-3.0.0-2.mp/freeglut/lib/x64")
find_package(GLUT REQUIRED) 
find_package(glm REQUIRED)

add_executable(sph "")
target_include_directories(sph PRIVATE ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${GLUT_INCLUDE_DIR})
target_link_libraries(sph PRIVATE GLEW::GLEW GLUT::GLUT OpenGL::GL)

add_subdirectory(src)
add_subdirectory(resources)
